# dem-gpx-scripts

./: .gitignore  README.md  pyproject.toml  rename.sh  tree.txt
scripts/: correct_elevation.py  debug_elevation.py
src/dem_gpx_utils/: __init__.py  elevation_tile.py
